@startuml
class CodeReadingNoteService {
  - project
  - topicList
  - JBPopup popup

  - getState()
  - loadState()
}

note right of CodeReadingNoteService
   state format is..
   topicLine
     - topicId
     - url
     - line
     - description
   topic
     - id
     - name
end note

class TopicList {
    - addTopicLine(Topic)
    - removeTopicLine()
    - addTopicLine()
    - removeTopic()
}

class Topic {
    - name
    - datetime
}

class TopicLine {
    - url
    - line
    - description
}


class StartupActivity

package idea {
    class FileEditor
    class VirtualFile

    interface FileEditorManagerListener
}

package ui {
    class ManagementPanel {

    }
    class TopicDetailPanel {
        - setTopic(Topic)
        - clear()
    }
    class TopicLineDetailPanel {
        - setTopicLine(TopicLine)
    }

    ManagementPanel o- TopicDetailPanel
    TopicDetailPanel o- TopicLineDetailPanel
}

package actions {
    class TopicAddAction
    class TopicRemoveAction
    class TopicLineAddAction
    class TopicLineRemoveAction
}


/' message '/
class com.intellij.util.messages.Topic
interface TopicListNotifier
interface TopicNotifier

TopicList ..> com.intellij.util.messages.Topic : publish TopicListNotifier
ManagementPanel ..> com.intellij.util.messages.Topic : subscribe TopicListNotifier

Topic ..> com.intellij.util.messages.Topic : publish TopicNotifier
TopicDetailPanel ..> com.intellij.util.messages.Topic : subscribe TopicNotifier

/' relation '/
StartupActivity ..> CodeReadingNoteService : initialize
CodeReadingNoteService o-- TopicList

TopicList o-- Topic
Topic o- TopicLine

TopicLine -- VirtualFile

ManagementPanel o-- CodeReadingNoteService
ManagementPanel o-- TopicList

TopicDetailPanel o-- Topic
TopicLineDetailPanel o-- TopicLine
@enduml